# Telex

./: Cargo.toml  README.md
.devcontainer/: devcontainer.json
src/: helpers.rs  main.rs
src/sip/: handler.rs  mod.rs  tcp.rs  udp.rs
src/sip/header/: generate.rs  mod.rs  to_from_str.rs  validate.rs
src/sip/request/: from_stream.rs  method.rs  mod.rs
src/sip/response/: mod.rs
src/sip/response/status/: mod.rs  to_from_str.rs
src/sip/state/: connection.rs  mod.rs
src/sip/state/registration/: mod.rs
